--- a/config/config.json
+++ b/config/config.json
@@ -1,13 +1,13 @@
 {
     "development": {
         "PORT": 3000,
-        "MONGODB_URI": "mongodb://localhost:27017/dahab",
+        "MONGODB_URI": "mongodb://127.0.0.1:27017/dahab",
         "JWT_SECRET": "SECRET#123",
         "JWT_EXP": "1440m"
     },
     "production": {
         "PORT": 80,
-        "MONGODB_URI": "mongodb://xxxxx/DB_Name",
+        "MONGODB_URI": "mongodb://127.0.0.1:27017/dahab",
         "JWT_SECRET": "SECRET#123",
         "JWT_EXP": "1440m"
     }
