--- a/config/config.json
+++ b/config/config.json
@@ -7,7 +7,7 @@
     },
     "production": {
         "PORT": 80,
-        "MONGODB_URI": "mongodb://username:password@mongo-instance-shard-00-00-a4iv8.mongodb.net:27017,mongo-instance-shard-00-01-a4iv8.mongodb.net:27017,mongo-instance-shard-00-02-a4iv8.mongodb.net:27017/test?ssl=true&replicaSet=mongo-instance-shard-0&authSource=admin&retryWrites=true&w=majority",
+        "MONGODB_URI": "https://dahabegypt.net/dahab",
         "JWT_SECRET": "SECRET#123",
         "JWT_EXP": "1440m"
     }
