--- a/config/config.json
+++ b/config/config.json
@@ -7,7 +7,7 @@
     },
     "production": {
         "PORT": 80,
-        "MONGODB_URI": "https://dahabegypt.net/dahab",
+        "MONGODB_URI": "mongodb://161.35.87.16/dahab",
         "JWT_SECRET": "SECRET#123",
         "JWT_EXP": "1440m"
     }
